@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>{WEB_TITLE}</title>
+	<title>{{ _p($core_config['main']['web_title']); }}</title>
 	<meta name="author" content="http://antonraharja.com">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
